[gd_scene load_steps=10 format=3 uid="uid://ccxa1vwival16"]

[ext_resource type="Script" path="res://scripts/car.gd" id="1_127pj"]
[ext_resource type="Material" uid="uid://bphvgujitxspf" path="res://resources/textures/back_wheel.tres" id="2_crjf7"]
[ext_resource type="Script" path="res://scripts/TopChaseCameraPivot.gd" id="2_ulep6"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_se3s2"]
points = PackedVector3Array(-0.77381, 0.297507, -1.52351, 0.73229, -0.25, 1.39684, -0.77381, 0.297507, 1.52351, 0.797465, 0.297619, -1.52351, -0.708481, -0.25, -1.39684, 0.73229, -0.25, -1.39684, -0.708481, -0.25, 1.39684, 0.797465, 0.297619, 1.52351)

[sub_resource type="BoxMesh" id="BoxMesh_8nf3m"]
size = Vector3(1.5, 0.5, 3)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wul42"]
albedo_color = Color(0.431373, 0, 0.282353, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_c3aow"]
material = SubResource("StandardMaterial3D_wul42")
top_radius = 0.4
bottom_radius = 0.4
height = 0.25
radial_segments = 12
rings = 1

[sub_resource type="CylinderMesh" id="CylinderMesh_rwofj"]
material = ExtResource("2_crjf7")
top_radius = 0.4
bottom_radius = 0.4
height = 0.25
radial_segments = 12
rings = 1

[sub_resource type="CylinderMesh" id="CylinderMesh_bqmvi"]
material = ExtResource("2_crjf7")
top_radius = 0.4
bottom_radius = 0.4
height = 0.25
radial_segments = 12
rings = 1

[node name="Car" type="VehicleBody3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
center_of_mass_mode = 1
script = ExtResource("1_127pj")

[node name="bl_marker" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, -0.4, -1)

[node name="CG" type="Marker3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.16041e-08, -0.0999809, 0.475895)

[node name="collision" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_se3s2")

[node name="car_body" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_8nf3m")

[node name="terrain_ray" type="RayCast3D" parent="car_body"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.266147, 0)
target_position = Vector3(0, -0.25, 0)
debug_shape_custom_color = Color(0.823529, 0.729412, 0, 1)

[node name="front_left_wheel" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, 1)
use_as_steering = true
wheel_radius = 0.4
wheel_rest_length = 0.25
wheel_friction_slip = 1.0
suspension_travel = 4.0
suspension_stiffness = 50.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="front_left_wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_c3aow")

[node name="RayCast3D" type="RayCast3D" parent="front_left_wheel"]

[node name="front_right_wheel" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0, 1)
use_as_steering = true
wheel_radius = 0.4
wheel_rest_length = 0.25
wheel_friction_slip = 1.0
suspension_travel = 4.0
suspension_stiffness = 50.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="front_right_wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_c3aow")

[node name="RayCast3D" type="RayCast3D" parent="front_right_wheel"]

[node name="back_left_wheel" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.2, 0, -1)
use_as_traction = true
wheel_radius = 0.4
wheel_rest_length = 0.25
wheel_friction_slip = 0.8
suspension_travel = 5.0
suspension_stiffness = 50.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="back_left_wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_rwofj")

[node name="RayCast3D" type="RayCast3D" parent="back_left_wheel"]

[node name="back_right_wheel" type="VehicleWheel3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2, 0, -1)
use_as_traction = true
wheel_radius = 0.4
wheel_rest_length = 0.25
wheel_friction_slip = 0.8
suspension_travel = 5.0
suspension_stiffness = 50.0
damping_compression = 1.9
damping_relaxation = 2.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="back_right_wheel"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_bqmvi")

[node name="RayCast3D" type="RayCast3D" parent="back_right_wheel"]

[node name="Cameras" type="Node3D" parent="."]

[node name="TopChaseCameraPivot" type="Node3D" parent="Cameras"]
script = ExtResource("2_ulep6")

[node name="TopChaseCamera" type="Camera3D" parent="Cameras/TopChaseCameraPivot"]
unique_name_in_owner = true
transform = Transform3D(-1, -2.38431e-08, -9.0737e-08, -4.76863e-08, 0.96209, 0.272734, 8.07943e-08, 0.272734, -0.96209, 6.93101e-07, 3.47491, -7.92815)
current = true

[node name="CockPitCamera" type="Camera3D" parent="Cameras"]
unique_name_in_owner = true
transform = Transform3D(-1, -3.26296e-09, -8.74837e-08, -6.52593e-09, 0.999303, 0.037324, 8.73009e-08, 0.037324, -0.999303, 6.35685e-09, 0.443304, -0.0727138)

[node name="FrontCamera" type="Camera3D" parent="Cameras"]
unique_name_in_owner = true
transform = Transform3D(-1, 3.20428e-10, -8.74234e-08, 6.40846e-10, 0.999993, -0.00366515, 8.74216e-08, -0.00366515, -0.999993, -1.35019e-07, 0.176899, 1.54444)

[node name="RearCamera" type="Camera3D" parent="Cameras"]
unique_name_in_owner = true
transform = Transform3D(1, 4.26221e-08, 1.10939e-08, -4.26221e-08, 0.873101, 0.48754, 1.10939e-08, -0.48754, 0.873101, -5.98413e-07, 3.10737, 6.84505)
